--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "lodash": "^4.17.21",
     "lucide-react": "^0.470.0",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "react-icons": "^5.4.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
