--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "axios": "^1.7.9",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "firebase": "^11.5.0",
     "lodash": "^4.17.21",
     "lucide-react": "^0.470.0",
     "posthog-js": "^1.222.0",
